# financial_planning

./: .cursorignore  .gitignore  pyproject.toml  setup.py
commbank-api-client/: client.py  main.py
merge/: commbank_to_up_json.py  commbank_tools.py  generate_accounts.py  run_transaction_processor.py
merge/financial_planning/: __init__.py  exporter.py  file_loader.py  models.py  test_transaction_processor.py  transaction_processor.py  validate_accounting.py
merge/tests/: __init__.py  conftest.py  test_exporter.py  test_file_loader.py  test_models.py  test_transaction_processor.py
up/: __init__.py  loggerino.py  transaction_sync.py  up_client.py
utils/: report.py
whats_up_docs/: up-bank-api-documentation.md
