[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "financial-planning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dotenv>=0.9.9",
    "jupyterlab>=4.4.0",
    "matplotlib>=3.10.1",
    "pandas>=2.2.3",
    "requests>=2.32.3",
]

[tool.hatch.build.targets.wheel]
packages = ["up"]
